<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">English–Romanian Dictionary</string>
    <string name="hello_world">Welcome world!</string>
    <string name="action_settings">General settings</string>
    <string name="bt_switch">Switch languages</string>
    <string name="cautare_termen">Search word</string>
    <string name="ellipsis">…</string>
    <string-array name="direction_array">
        <item>Write an English word…</item>
        <item>Write a Romanian word…</item>
    </string-array>
    <plurals name="tv_number_of_words">
        <item quantity="one">There is one word in DataBase</item>
        <item quantity="other">There are %1$s words</item>
    </plurals>
    <string name="tv_website">www.pontes.ro</string>
    <string name="hint_write_here">Write here…</string>
    <string name="bt_search">Search</string>
    <string name="bt_cancel_search">Clear</string>
    <string name="bt_learn_irregular_verbs">Irregular verbs…</string>
    <string name="warning">Warning!</string>
    <string name="error">Error!</string>
    <string name="warning_wrong_search">You must write at least two letters to search!</string>
    <string name="warning_not_results">No results found!&lt;br>Searched for: &lt;i>%1$s&lt;/i>.&lt;br>Try again.</string>
    <string name="warning_no_tts_available_en">Text to Speech voice is not available for chosen locale.\nTry to set another language in Settings.\nYou can also install a TTS engine with an English voice language.</string>
    <string name="warning_no_tts_available_ro">Text to Speech voice is not available for Romanian language.\nTry to update the Google Text-to-speech engine in Google Play Store.\nStarting January 2018, Google included a Romanian voice in their free speech synthesizer.</string>
    <string name="tv_word_and_explanation">&lt;b>%1$s&lt;/b>%2$s%3$s</string>
    <plurals name="tv_number_of_results">
        <item quantity="one">One result found:</item>
        <item quantity="other">%d results found:</item>
    </plurals>
    <string name="mnu_settings">General settings</string>
    <string name="mnu_display">Text size</string>
    <string name="mnu_about">About dictionary…</string>
    <string name="mnu_go_to_web_page">Application web page</string>
    <string name="mnu_app_in_play_store">The application in Google Play Store</string>
    <string name="mnu_default_settings">Reset to defaults…</string>
    <string name="title_default_settings">Reset to defaults</string>
    <string name="body_default_settings">Are you sure you want to reset it?\nThe application will be in its initial state, the search log is also deleted.\nIf you bought the Premium version, this will be re-activated after a new launch of the application.</string>
    <string name="title_activity_settings">General Settings</string>
    <string name="enable_sounds">Enable sounds</string>
    <string name="enable_shake">Shake to initiate a new search</string>
    <string name="enable_screen_awake">Keep screen awake</string>
    <string name="enable_ime_action">Search pressing the Enter key of the virtual keyboard</string>
    <string name="search_full_text">Enable full text search (this will display only whole words, delimited by non-alphanumeric characters)</string>
    <string name="title_activity_display_settings">Text size</string>
    <string name="display_choose_size">Choose the size of the results text:</string>
    <string name="about">About Dictionary</string>
    <string name="app_version">English–Romanian Dictionary, version %1$s</string>
    <string name="app_release_date">The 1.0 version was released on Wednesday, 9 September 2015</string>
    <string name="app_last_update">Last update: Sunday, 27 September 2026</string>
    <string name="app_creator">Programmed by Emanuel Boboiu (Manu)</string>
    <string name="phone_number">Phone: +40740203043</string>
    <string name="email_address">E-mail: emanuelboboiu@gmail.com</string>
    <string name="web_address">Web: https://android.pontes.ro</string>
    <string name="app_credits2">Icon and images created by Iulian Duma</string>
    <string name="app_credits3">Database created by Ioan Cîmpean</string>
    <string name="app_credits4">Beta testing: Iulian Duma, Ioto Hăinală</string>
    <string name="app_credits5">The English vocabulary resources (synonyms, antonyms, hypernyms etc.) are offered by Datamuse API – datamuse.com.</string>
    <string name="mnu_help">Help…</string>
    <string name="help_alert_title">Help for Dictionary</string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9705662823127450/8362836694</string>
    <string name="banner_ad_application_id" translatable="false">ca-app-pub-9705662823127450~6886103492</string>
    <string name="title_activity_verbs">Irregular Verbs</string>
    <string name="mnu_irregular_verbs">Verbs</string>
    <string name="mnu_go_to_dictionary">Dictionary</string>
    <string name="tv_welcome_verbs_message">We know &lt;b>%1$s&lt;/b> irregular verbs:&lt;br> - &lt;b>%2$s&lt;/b> basic forms&lt;br> - &lt;b>%3$s&lt;/b> derivative forms.&lt;br>&lt;br>You can learn them reading the alphabetical list, or you can choose our quizzes.&lt;br>&lt;br>&lt;b>Note:&lt;/b> For forms II and III, several variants may be displayed, these being delimited by \"/\" (slash); The variants preceded by \"*\" (asterisk) are archaic forms.</string>
    <string name="bt_verbs_list">Lists</string>
    <string name="bt_verbs_quiz">Quizzes</string>
    <string name="tv_choose_letter">Choose an initial to show verbs</string>
    <string name="in_spinner_choose_a_letter">- choose here -</string>
    <string name="in_spinner_all_initials">all - %1$s</string>
    <string name="verb_in_list">%1$s. &lt;b>%2$s&lt;/b>, %3$s, %4$s – &lt;i>%5$s&lt;/i></string>
    <string name="choose_forms_to_fill_in">Choose the forms to fill in:</string>
    <string name="bt_start_quiz">Start</string>
    <string name="bt_next_item">Next…</string>
    <string name="bt_finish_quiz">Finish</string>
    <string name="text_unfilled">.......</string>
    <string name="content_description_unfilled">The %1$s form is missing. Click here to fill in it.</string>
    <string-array name="verb_forms_array">
        <item>Nothing</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
    </string-array>
    <string name="no_forms_were_chosen">You must choose at least one form to fill in.\nCheck the forms you want to fill in and click again the Start button.</string>
    <string name="item_title_in_quiz">Item %1$s of %2$s:</string>
    <string name="quiz_message_before_start">Choose one, two or three forms to fill in, and click the Start button.\nThe items will appear here one by one.\nAny variant of a form, with the exception of archaic ones, is considered to be correct.</string>
    <string name="quiz_progress_bar">Progress bar %1$s%%</string>
    <string name="final_mark">You\'ve got %1$s.</string>
    <plurals name="tv_number_of_mistakes">
        <item quantity="one">You had only one mistake:</item>
        <item quantity="other">You had %d mistakes:</item>
    </plurals>
    <string name="tv_you_had_no_mistakes">Congratulations! You were perfect, no mistakes found.\nYou got the full mark.</string>
    <string name="final_item_error">Item %1$s, the %2$s form of the verb %3$s:\ncorrect – %4$s, you wrote %5$s.</string>
    <string name="mnu_view_statistics">Local Statistics…</string>
    <string name="title_view_statistics">Statistics</string>
    <string name="bt_close">Close</string>
    <plurals name="tv_number_of_tests">
        <item quantity="one">You\'ve been tested one time.</item>
        <item quantity="other">You\'ve been tested %1$s times.</item>
    </plurals>
    <string name="tv_general_average">Your general average is %1$s.</string>
    <string name="tv_no_average">The general average will appear here.</string>
    <string name="tv_average_of_last_marks">The average for last %1$s marks is %2$s</string>
    <string name="no_average_for_last_marks">The average for last %1$s marks will appear here</string>
    <string name="one_of_last_marks">%1$s – %2$s</string>
    <string name="no_last_x_marks">A list containing the last %1$s marks will appear here.</string>
    <string name="local_stats_bottom_info">Only tests that have been resolved since the last application was installed or the application data was deleted are taken into account for these statistics.\nGo to Online Statistics to see all the resolved tests with an active Internet connection.</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="date_format">%1$s, %2$s %3$s %4$s, %5$s.%6$s</string>
    <string name="mnu_view_online_stats">Online statistics (Irregular Verbs)</string>
    <string name="mnu_nickname">Your nickname…</string>
    <string name="nickname_title">Nickname</string>
    <string name="mnu_settings_submenu">Settings</string>
    <string name="mnu_web_submenu">WEB resources</string>
    <string name="mnu_get_premium_version">Premium version…</string>
    <string name="cm_add_to_vocabulary">Add to My Vocabulary</string>
    <string name="cm_speak_result">Pronounce term</string>
    <string name="cm_speak_explanation">Pronounce explanation</string>
    <string name="cm_spell_result">Spell term aloud</string>
    <string name="cm_copy_result">Copy entire result to clipboard</string>
    <string name="cm_copy_word">Copy word to clipboard</string>
    <string name="cm_copy_explanation">Copy explanation to clipboard</string>
    <string name="mnu_vocabulary">Vocabulary</string>
    <string name="cm_properties">Properties…</string>
    <string name="cm_delete">Delete</string>
    <string name="mnu_delete_all">Empty the vocabulary…</string>
    <string name="mnu_delete_section">Delete section…</string>
    <string name="mnu_section_information">Section information…</string>
    <string name="cm_edit">Edit</string>
    <string name="mnu_add_in_section">Add in section…</string>
    <string name="mnu_import_predefined">Import predefined sections…</string>
    <string name="mnu_rate">Rate application…</string>
    <string name="mnu_tts_settings">Voice settings (TTS)</string>
    <string name="mnu_background_settings">Choose background</string>
    <string name="bt_voice">Voice search</string>
    <string name="mnu_separator">Separator (word – explanation)…</string>
    <string name="mnu_search_history">Log</string>
    <string name="sh_cm_search_result">Search in dictionary</string>
    <string name="cm_cancel_search">Cancel current search</string>
    <string name="mnu_datamuse_submenu">Lexical resources…</string>
    <string name="mnu_pronunciation_submenu">Pronunciation options…</string>
    <string name="mnu_copy_submenu">Copy options…</string>
    <string name="cm_ipa_result">Phonetic transcriptions</string>
    <string name="cm_synonims_result">Synonyms list</string>
    <string name="cm_antonyms_result">Antonyms list</string>
    <string name="cm_homophones_result">Homophones list</string>
    <string name="cm_rhymes_result">Rhymes list</string>
    <string name="cm_definition_result">English definitions</string>
    <string name="cm_word_frequency">Word frequency</string>
    <string name="cm_hypernyms_result">Hypernyms list</string>
    <string name="cm_hyponyms_result">Hyponyms list</string>
    <string name="cm_followers_result">Frequent followers</string>
    <string name="cm_predecessors_result">Frequent predecessors</string>
    <string name="mnu_choose_language">Application language…</string>
    <string name="mnu_section_rename">Rename section…</string>
    <string name="mnu_update_new_words">Update database…</string>
    <string name="mnu_propose_new_words">Propose new word…</string>
</resources>