<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.pontes.englishromaniandictionary.MainActivity">

    <item
        android:id="@+id/mnuVocabulary"
        android:orderInCategory="150"
        android:title="@string/mnu_vocabulary"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuIrregularVerbs"
        android:orderInCategory="175"
        android:title="@string/mnu_irregular_verbs"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuSearchHistory"
        android:orderInCategory="200"
        android:title="@string/mnu_search_history"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuUpdateNewWords"
        android:orderInCategory="225"
        android:title="@string/mnu_update_new_words"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuProposeNewWords"
        android:orderInCategory="227"
        android:title="@string/mnu_propose_new_words"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuSettingsSubmenu"
        android:orderInCategory="250"
        android:title="@string/mnu_settings_submenu"
        android:showAsAction="ifRoom|withText">

        <!-- Settings submenu: -->
        <menu>
            <item
                android:id="@+id/mnuActionSettings"
                android:orderInCategory="260"
                android:title="@string/mnu_settings"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuTTSSettings"
                android:orderInCategory="265"
                android:title="@string/mnu_tts_settings"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuDisplaySettings"
                android:orderInCategory="270"
                android:title="@string/mnu_display"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuSeparatorSettings"
                android:orderInCategory="275"
                android:title="@string/mnu_separator"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuBackgroundSettings"
                android:orderInCategory="280"
                android:title="@string/mnu_background_settings"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuChooseLanguageSettings"
                android:orderInCategory="285"
                android:title="@string/mnu_choose_language"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuResetDefaults"
                android:orderInCategory="290"
                android:title="@string/mnu_default_settings"
                android:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/mnuWebSubmenu"
        android:orderInCategory="500"
        android:title="@string/mnu_web_submenu"
        android:showAsAction="never">

        <!-- web submenu: -->
        <menu>
            <item
                android:id="@+id/mnuGoToWebPage"
                android:orderInCategory="520"
                android:title="@string/mnu_go_to_web_page"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuViewOnlineStatistics"
                android:orderInCategory="530"
                android:title="@string/mnu_view_online_stats"
                android:showAsAction="never" />
            <item
                android:id="@+id/mnuAppInPlayStore"
                android:orderInCategory="550"
                android:title="@string/mnu_app_in_play_store"
                android:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/mnuGetPremiumVersion"
        android:orderInCategory="700"
        android:title="@string/mnu_get_premium_version"
        android:showAsAction="never" />
    <item
        android:id="@+id/mnuHelp"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="850"
        android:title="@string/mnu_help"
        android:showAsAction="never" />
    <item
        android:id="@+id/mnuAboutDialog"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="900"
        android:title="@string/mnu_about"
        android:showAsAction="never" />
    <item
        android:id="@+id/mnuRate"
        android:orderInCategory="1000"
        android:title="@string/mnu_rate"
        android:showAsAction="never" />

</menu>