<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cmSearchResult"
        android:orderInCategory="100"
        android:title="@string/sh_cm_search_result"
        android:showAsAction="never" />
    <item
        android:id="@+id/cmSpeakResult"
        android:orderInCategory="299"
        android:title="@string/cm_speak_result"
        android:showAsAction="never" />
    <item
        android:id="@+id/cmSpellResult"
        android:orderInCategory="300"
        android:title="@string/cm_spell_result"
        android:showAsAction="never" />
    <item
        android:id="@+id/mnuCopySubmenu"
        android:orderInCategory="500"
        android:title="@string/mnu_copy_submenu"
        android:showAsAction="never">

        <!-- Copy submenu: -->
        <menu>
            <item
                android:id="@+id/cmCopyResult"
                android:orderInCategory="510"
                android:title="@string/cm_copy_result"
                android:showAsAction="never" />
            <item
                android:id="@+id/cmCopyWord"
                android:orderInCategory="511"
                android:title="@string/cm_copy_word"
                android:showAsAction="never" />
            <item
                android:id="@+id/cmCopyExplanation"
                android:orderInCategory="512"
                android:title="@string/cm_copy_explanation"
                android:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/cmVocabularyEdit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="598"
        android:title="@string/cm_edit"
        android:showAsAction="never" />
    <item
        android:id="@+id/cmVocabularyDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="600"
        android:title="@string/cm_delete"
        android:showAsAction="never" />
    <item
        android:id="@+id/cmVocabularyProperties"
        android:orderInCategory="700"
        android:title="@string/cm_properties"
        android:showAsAction="never" />

</menu>