<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.pontes.englishromaniandictionary.VocabularyActivity">

    <item
        android:id="@+id/mnuGoToDictionary"
        android:orderInCategory="50"
        android:title="@string/mnu_go_to_dictionary"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuIrregularVerbs"
        android:orderInCategory="100"
        android:title="@string/mnu_irregular_verbs"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuImportPredefined"
        android:orderInCategory="110"
        android:title="@string/mnu_import_predefined"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuSectionInformation"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="120"
        android:title="@string/mnu_section_information"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuSectionRename"
        android:orderInCategory="130"
        android:title="@string/mnu_section_rename"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuSectionAddNew"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="150"
        android:title="@string/mnu_add_in_section"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuDeleteSection"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="200"
        android:title="@string/mnu_delete_section"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuDeleteAll"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="201"
        android:title="@string/mnu_delete_all"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuHelp"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="850"
        android:title="@string/mnu_help"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuAboutDialog"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="900"
        android:title="@string/mnu_about"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuRate"
        android:orderInCategory="1000"
        android:title="@string/mnu_rate"
        app:showAsAction="ifRoom|withText" />

</menu>