<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.pontes.englishromaniandictionary.VerbsActivity" >

    <item
        android:id="@+id/mnuGoToDictionary"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_go_to_dictionary"/>
    <item
        android:id="@+id/mnuVocabulary"
        android:orderInCategory="150"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_vocabulary"/>
    <item
        android:id="@+id/mnuViewStatistics"
        android:orderInCategory="200"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_view_statistics"/>
    <item
        android:id="@+id/mnuViewOnlineStatistics"
        android:orderInCategory="250"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_view_online_stats"/>
    <item
        android:id="@+id/mnuNickname"
        android:orderInCategory="275"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_nickname"/>
    <item
        android:id="@+id/mnuHelp"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="850"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_help"/>
    <item
        android:id="@+id/mnuAboutDialog"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="900"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_about"/>
    <item
        android:id="@+id/mnuRate"
        android:orderInCategory="1000"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_rate"/>

</menu>