<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llSearch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/search_icons_background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@id/btSwitch"
        style="@style/style_for_image_views_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1111"
        android:contentDescription="@string/bt_switch"
        android:nextFocusLeft="@id/btSwitch"
        android:nextFocusRight="@id/etWord"
        android:nextFocusDown="@+id/tvNumberOfResults"
        android:nextFocusForward="@+id/etWord"
        android:onClick="switchButton"
        android:src="@drawable/flag0" />

    <EditText
        android:id="@id/etWord"
        style="@style/style_for_edit_text_top"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6390"
        android:hint="@string/hint_write_here"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        android:nextFocusLeft="@id/btSwitch"
        android:nextFocusRight="@id/btSearch"
        android:nextFocusDown="@+id/tvNumberOfResults"
        android:nextFocusForward="@+id/btSearch" />

    <ImageView
        android:id="@id/btSearch"
        style="@style/style_for_image_views_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.0833"
        android:contentDescription="@string/bt_search"
        android:nextFocusLeft="@id/etWord"
        android:nextFocusRight="@id/btVoice"
        android:nextFocusDown="@+id/tvNumberOfResults"
        android:nextFocusForward="@+id/btVoice"
        android:onClick="searchButton"
        android:src="@drawable/ic_bt_search" />

    <ImageView
        android:id="@id/btVoice"
        style="@style/style_for_image_views_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.0833"
        android:contentDescription="@string/bt_voice"
        android:nextFocusLeft="@id/btSearch"
        android:nextFocusRight="@id/btCancelSearch"
        android:nextFocusDown="@+id/tvNumberOfResults"
        android:nextFocusForward="@+id/btCancelSearch"
        android:onClick="searchVoiceButton"
        android:src="@drawable/ic_bt_microphone" />

    <ImageButton
        android:id="@id/btCancelSearch"
        style="@style/style_for_image_views_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.0833"
        android:contentDescription="@string/bt_cancel_search"
        android:nextFocusLeft="@id/btVoice"
        android:nextFocusRight="@id/btCancelSearch"
        android:nextFocusDown="@+id/tvNumberOfResults"
        android:onClick="cancelSearchButton"
        android:src="@drawable/ic_bt_delete" />

</LinearLayout>